# oreobot

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build-release.nu  compose.yml  run.nu  rust-toolchain.toml  schema.prisma
.cargo/: config.toml
.github/workflows/: deploy.yml  deploy_v2.yml  dokku.yml
bot/src/: error.rs  prelude.rs
cache/: Cargo.toml
cache/src/: lib.rs  main.rs
crates/bot/: Cargo.toml  Dockerfile  build-release.nu  build-release.sh
crates/bot/src/: error.rs  main.rs  prelude.rs
crates/bot/src/commands/: impersonate.rs  mod.rs  newsjump.rs  ping.rs
crates/bot/src/commands/role/: color.rs  custom.rs  mod.rs
crates/bot/src/error/: errors.rs  mod.rs
crates/bot/src/features/: antithumbs.rs  clone.rs  impersonate.rs  logger.rs  message_clone.rs  mod.rs  news_clone.rs  share.rs  starboard.rs
crates/bot/src/integrations/: mod.rs  smarty.rs
crates/bot/src/mpmc/: channel.rs  event.rs  mod.rs
crates/bot/src/server/: mod.rs
crates/bot/src/util/: embed.rs  emoji.rs  mention.rs  mod.rs
crates/cache/: Cargo.toml  Dockerfile  build-release.nu  build-release.sh
crates/cache/src/: lib.rs  main.rs
crates/logger/: Cargo.toml  Dockerfile  build-release.nu
crates/logger/src/: error.rs  lib.rs  main.rs  prelude.rs
crates/logger/src/database/: category.rs  channel.rs  interaction.rs  member.rs  message.rs  message_clone.rs  mod.rs  news_in_chat.rs  ready.rs  role.rs
crates/prelude/: Cargo.toml
crates/prelude/src/: color.rs  debug.rs  error.rs  lib.rs  nci.rs
crates/prisma/: Cargo.toml
crates/prisma-cli/: Cargo.toml
crates/prisma/src/: error.rs  generated.rs  lib.rs
crates/proc-macros/: Cargo.toml
crates/proc-macros/src/: common.rs  lib.rs  logger_wire.rs  select_menu_options.rs  update_enum.rs  wire.rs
crates/router/: Cargo.toml
crates/router/src/: comms.rs  error.rs  lib.rs  server.rs  servers.rs
crates/router/src/net/: client.rs  common.rs  mod.rs  persist_server.rs  server.rs
crates/router/src/servers/: bot.rs  cache.rs  logging.rs  mod.rs
deploy/: Cargo.toml
deploy/src/: defaults.rs
logger/: Cargo.toml  build-release.sh
logger/src/: error.rs  lib.rs  main.rs  prelude.rs
logger/src/database/: category.rs  channel.rs  interaction.rs  member.rs  message.rs  mod.rs  ready.rs  role.rs  user_settings.rs
oreo-proc-macros/: Cargo.toml
oreo-proc-macros/src/: lib.rs
prelude/: Cargo.toml
prelude/src/: color.rs  lib.rs  nci.rs
prisma/: Cargo.toml  schema.prisma
prisma-cli/: Cargo.toml
prisma/src/: error.rs  generated.rs  lib.rs
prismaclient/: Cargo.toml
proc-macros/: Cargo.toml
proc-macros/src/: common.rs  lib.rs  select_menu_options.rs  update_enum.rs  wire.rs
router/: Cargo.toml
router/src/: comms.rs  lib.rs  request.rs
scripts/: build.nu  clean.nu
src/: env.rs  main.rs  nci.rs  prelude.rs  startup.rs
src/cache/: color_role.rs  custom_role.rs  impersonate.rs  mod.rs  newsinchat.rs  user_settings.rs
src/commands/: boo.rs  chernobyl.rs  help.rs  impersonate.rs  jumptochat.rs  mod.rs  ping.rs  role.rs  setting.rs  settings.rs  star.rs
src/embed/: mod.rs
src/error/: mod.rs
src/events/: category.rs  channel.rs  emitter.rs  error.rs  event.rs  events.rs  interaction.rs  message.rs  mod.rs  payload.rs  payloads.rs
src/features/: impersonate.rs  mod.rs  newsinchat.rs  starboard.rs
src/logging/: category.rs  channel.rs  interaction.rs  member.rs  message.rs  mod.rs  ready.rs  role.rs
src/prelude/: mod.rs
src/prisma/: mod.rs  prisma_client.rs
src/settings/: color_role.rs  mod.rs
src/util/: color.rs  colors.rs  data.rs  embed.rs  ephemeral.rs  get_prisma.rs  is_admin.rs  latency.rs  loading.rs  message.rs  mod.rs  role.rs  share.rs  string.rs
