# [package]
# name = "oreo-bot"
# version = "0.1.0"
# edition = "2021"


# [dependencies]
# anyhow = { version = "1.0.75", features = ["backtrace"] }
# async-trait = "0.1.73"
# chrono = "0.4.29"
# color-name = "1.1.0"
# dotenv = "0.15.0"
# dotenv_codegen = "0.15.0"
# futures = "0.3.28"
# itertools = "0.11.0"
# log = "0.4.20"
# poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
# rand = { version = "0.8.5", features = ["nightly", "log"] }
# serde = { version = "1.0.188", features = ["derive"] }
# serde_json = "1.0.105"
# simple_logger = "4.2.0"
# thiserror = "1.0.48"
# tokio = "1.32.0"
# oreo_proc_macros = { path = "./oreo-proc-macros" }

[workspace]
resolver = "2"
members = [
	"router",
	"proc-macros",
	"prisma",
	"logger",
	"prelude",
	"cache",
	"bot",
]
