[package]
name = "oreo-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4.19"
poise = "0.5.5"
serde = "1.0.171"
simple_logger = "4.2.0"
tokio = "1.29.1"

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.8"

[workspace]
resolver = "2"
members = ["prisma-cli", "."]
