[package]
name = "oreo-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oreo-proc-macros = { version = "0.1.0", path = "../proc-macros", default-features = false, features = ["update-enum"] }
serde = "1.0.188"
thiserror = "1.0.49"
tokio = { version = "1.33.0", optional = true }

[dependencies.oreo-router]
path = "../router"
default-features = false

[dependencies.oreo-prelude]
path = "../prelude"
features = ["serenity", "color"]

[features]
default = []
bin = ["dep:tokio", "oreo-router/cache-server"]

[lib]

[[bin]]
name = "oreo-cache"
path = "src/main.rs"
required-features = ["bin"]
