[package]
name = "oreo-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
thiserror = "1.0.49"
tokio = { version = "1.33.0", optional = true }

[dependencies.oreo-router]
path = "../router"
default-features = false

[dependencies.oreo-prelude]
path = "../prelude"
features = ["serenity", "prisma", "user-settings"]

[features]
default = []
bin = ["dep:tokio", "oreo-router/cache-server"]

[lib]

[[bin]]
name = "oreo-cache"
path = "src/main.rs"
required-features = ["bin"]
