[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
dotenv = "0.15.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
docker-api = "0.14.0"
chrono = "0.4.26"
futures = "0.3.28"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
git2 = "0.17.2"
reqwest = "0.11.18"
tokio = "1.30.0"
