[package]
name = "oreo-logger"
version = "0.1.0"
edition = "2021"
autobins = false
default-run = "oreo-logger"

[dependencies]
serde = "1.0.188"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"], optional = true }

[dependencies.oreo-router]
path = "../router"
default-features = false

[dependencies.oreo-prelude]
path = "../prelude"
features = ["serenity"]

[features]
default = []
bin = [
	"oreo-router/server",
	"dep:tokio",
	"oreo-prelude/prisma",
	"oreo-prelude/nci",
	"oreo-prelude/log",
	"oreo-prelude/color",
]

[[bin]]
name = "oreo-logger"
path = "src/main.rs"
required-features = ["bin"]
