[package]
name = "oreo-prelude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
log = { version = "0.4.20", optional = true }
color-name = { version = "1.1.0", optional = true }
serde = { version = "1.0.188", features = ["derive"], optional = true }
async-trait = { version = "0.1.73", optional = true }
thiserror = { version = "1.0.49", optional = true }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
optional = true

[dependencies.oreo-prisma]
path = "../prisma"
optional = true
default-features = false

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
branch = "serenity-next"
default-features = false
optional = true

[features]
default = []
serenity = ["dep:serenity"]
prisma = ["dep:oreo-prisma"]
nci = ["serenity"]
log = ["dep:log"]
color = ["dep:color-name", "dep:serde", "dep:thiserror"]
color-arg = ["dep:poise", "dep:async-trait", "color", "serenity/rustls_backend"]
