[package]
name = "oreo-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
thiserror = "1.0.50"
tokio = "1.34.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
branch = "serenity-next"

[dependencies.oreo-prelude]
path = "../prelude"
features = ["nci", "log", "color", "color-arg", "user-settings"]
