[package]
name = "oreo-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.1.1"
automod = "1.0.13"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
futures = "0.3.29"
lazy_static = "1.4.0"
thiserror = "1.0.50"
tokio = "1.34.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
branch = "next"

[dependencies.oreo-prelude]
path = "../prelude"
features = ["nci", "log", "color", "color-arg", "user-settings"]

[dependencies.oreo-router]
path = "../router"
features = [
	"client",
	"servermeta-cache",
	"servermeta-logger",
	"servermeta-bot",
	"persist-server",
]

[dependencies.oreo-proc-macros]
path = "../proc-macros"
features = ["logger-wire"]
