[package]
name = "oreo-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.49"
tokio = "1.33.0"

[dependencies.oreo-router]
path = "../router"
default-features = false
features = ["persist-server", "servermeta-cache"]

[dependencies.oreo-prelude]
path = "../prelude"
features = ["serenity"]
