[package]
name = "oreo-logger"
version = "0.1.0"
edition = "2021"
autobins = false
default-run = "oreo-logger"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde-error = "0.1.2"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"], optional = true }

[dependencies.oreo-router]
path = "../router"
default-features = false

[dependencies.oreo-cache]
path = "../cache"
optional = true

[dependencies.oreo-prelude]
path = "../prelude"
features = ["serenity", "prisma", "user-settings"]

[dependencies.oreo-proc-macros]
path = "../proc-macros"
features = ["wire"]
optional = true

[features]
default = []
bin = [
	"oreo-router/server",
	"oreo-router/client",
	"dep:tokio",
	"oreo-prelude/nci",
	"oreo-prelude/log",
	"oreo-prelude/color",
	"dep:oreo-proc-macros",
	"dep:oreo-cache",
]

[[bin]]
name = "oreo-logger"
path = "src/main.rs"
required-features = ["bin"]
