[package]
name = "oreo-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
serde = { version = "1.0.188", features = ["derive"] }
serde-error = "0.1.2"
serde_json = "1.0.108"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }

[dependencies.oreo-router]
path = "../router"
features = ["server", "servermeta-logger", "servermeta-bot", "client"]

[dependencies.oreo-prelude]
path = "../prelude"
features = ["serenity", "prisma", "user-settings", "nci", "log", "color"]

[dependencies.oreo-proc-macros]
path = "../proc-macros"
features = ["wire"]
