[package]
name = "oreo-prelude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
log = { version = "0.4.20", optional = true }
color-name = { version = "1.1.0", optional = true }
serde = { version = "1.0.193", features = ["derive"], optional = true }
async-trait = { version = "0.1.73", optional = true }
thiserror = { version = "1.0.49", optional = true }
simple_logger = { version = "4.3.0", optional = true, features = [
	"threads",
	"nightly",
] }
futures = { version = "0.3.29", optional = true }

[dependencies.serenity]
version = "0.12.0"
default-features = false
optional = true

[dependencies.oreo-prisma]
path = "../prisma"
optional = true
default-features = false

[dependencies.oreo-proc-macros]
path = "../proc-macros"
optional = true
default-features = false
features = ["update-enum"]

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
branch = "current"
default-features = false
optional = true

[features]
default = []
serenity = ["dep:serenity"]
prisma = ["dep:oreo-prisma"]
nci = ["serenity"]
log = ["dep:log", "dep:simple_logger"]
color = ["dep:color-name", "dep:serde", "dep:thiserror"]
color-arg = ["dep:poise", "dep:async-trait", "color", "serenity/rustls_backend"]
user-settings = ["dep:serde", "dep:oreo-proc-macros", "prisma"]
futures = ["dep:futures"]
