[package]
name = "prisma-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.prisma-client-rust-cli]
git = "https://github.com/onlycs/prisma-client-rust"
branch = "main"
default-features = false
features = ["postgresql"]

[dependencies.socket2]
features = ["all"]
