[package]
name = "oreo-proc-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = "2.0.37"

[lib]
proc-macro = true

[features]
default = []
update-enum = []
select-menu-options = []
wire = []
