[package]
name = "oreo-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }

[dependencies.oreo-prelude]
path = "../prelude"
features = ["log", "futures"]

[lib]

[features]
default = ["client", "server"]
client = []
server = []
cache-server = []
